<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_row="1"
        android:layout_column="3"
        android:layout_marginLeft="40dp"
        android:layout_marginStart="76dp"
        android:layout_marginBottom="40dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <RadioButton android:id="@+id/level1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/level1"></RadioButton>

        <RadioButton android:id="@+id/level2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/level2"></RadioButton>

        <RadioButton android:id="@+id/level3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/level3"
        />
    </RadioGroup>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_row="1"
        android:layout_column="4"
        android:layout_marginRight="40dp"
        android:layout_marginEnd="40dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="28dp">

        <RadioButton android:id="@+id/range1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Range1"></RadioButton>

        <RadioButton android:id="@+id/reange2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Range2"></RadioButton>

        <RadioButton android:id="@+id/range3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Range3" ></RadioButton>

        <RadioButton android:id="@+id/range4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Range4"></RadioButton>

    </RadioGroup>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="126dp">

        <Button
            android:text="Mode A"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/button3"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:id="@+id/modeA" />

        <Button
            android:text="Mode B"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/modeB"
            android:layout_centerVertical="true"
            android:layout_alignLeft="@+id/radioGroup"
            android:layout_alignStart="@+id/radioGroup" />
    </LinearLayout>


</RelativeLayout>