<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="126dp">

        <Button
            android:text="Mode A"
            android:layout_width="370dp"
            android:layout_height="63dp"
            android:layout_alignBottom="@+id/button3"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:id="@+id/modeA"
            android:elevation="0dp" />

        <Button
            android:text="Mode B"
            android:layout_width="369dp"
            android:layout_height="61dp"
            android:id="@+id/modeB"
            android:layout_centerVertical="true"
            android:layout_alignLeft="@+id/radioGroup"
            android:layout_alignStart="@+id/radioGroup" />
    </LinearLayout>

    <TextView
        android:text="Select Mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="84dp"
        android:id="@+id/textView6"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="3"
        android:layout_marginLeft="70dp"
        android:layout_marginStart="70dp"
        android:baselineAligned="false"
        android:layout_alignTop="@+id/radioGroup2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/radioGroup3">

        <RadioButton android:id="@+id/level1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/level1"></RadioButton>

        <RadioButton android:id="@+id/level2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/level2"></RadioButton>

        <RadioButton android:id="@+id/level3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/level3"></RadioButton>

    </RadioGroup>

    <TextView
        android:text="Select Range"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView5"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        android:layout_above="@+id/radioGroup2"
        android:layout_alignRight="@+id/radioGroup2"
        android:layout_alignEnd="@+id/radioGroup2"
        android:layout_marginBottom="13dp" />

    <TextView
        android:text="Select Level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView4"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        android:layout_alignBaseline="@+id/textView5"
        android:layout_alignBottom="@+id/textView5"
        android:layout_alignLeft="@+id/radioGroup3"
        android:layout_alignStart="@+id/radioGroup3" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_row="1"
        android:layout_column="4"
        android:layout_marginRight="48dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="33dp"
        android:id="@+id/radioGroup2"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <RadioButton android:id="@+id/range1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Range1"></RadioButton>

        <RadioButton android:id="@+id/reange2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Range2"></RadioButton>

        <RadioButton android:id="@+id/range3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Range3" ></RadioButton>

        <RadioButton android:id="@+id/range4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Range4"></RadioButton>

    </RadioGroup>


</RelativeLayout>